--- a/tests/libb/Cargo.toml
+++ b/tests/libb/Cargo.toml
@@ -10,9 +10,17 @@ edition = "2018"
 log-lib-filter = { path = "../../log-lib-filter" }
 
 [features]
+default = ["log_level_warn"]
+
 max_level_off = []
 max_level_error = []
 max_level_warn = []
 max_level_info = []
 max_level_debug = []
 max_level_trace = []
+
+log_level_error = []
+log_level_warn = []
+log_level_info = []
+log_level_debug = []
+log_level_trace = []
